--- a/assets/scss/color.scss
+++ b/assets/scss/color.scss
@@ -20,12 +20,12 @@ $gray-900: #171717;
 $gray-1000: #000;
 
 html[data-theme="light"] {
-  --color-text: #{$gray-900};
-  --color-text-secondary: #{$gray-500};
+  --color-text: #232020;
+  --color-text-secondary: #7E7F9A;
   --color-text-footer: #{$gray-500};
   --color-border: #{$gray-300};
   --color-border-collapsible-menu: #{$gray-200};
-  --color-background: #{$gray-0};
+  --color-background: #F9F8F8;
   --color-background-hover: #{$gray-50};
   --color-background-overlay: #{$gray-150};
   --color-background-inline-code: #{$gray-100};
