--- a/assets/scss/components/nav.scss
+++ b/assets/scss/components/nav.scss
@@ -21,7 +21,7 @@
     }
 
     .navbar-item {
-      margin: 0 .5rem 0 0;
+      margin: 0 0.9rem 0 0;
       border-bottom: 2px solid transparent;
 
       > a.pure-menu-link {
