--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -71,7 +71,7 @@ header {
 
         .dropdown-desc {
           @include text-sm;
-          margin-left: 0.35rem;
+          margin-right: 0.35rem;
         }
       }
     }
