--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -1,10 +1,16 @@
-html, button, input, select, textarea,
-.pure-g [class *= "pure-u"] {
-  font-family: system-ui,-apple-system,segoe ui,Roboto,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji;
+html,
+button,
+input,
+select,
+textarea,
+.pure-g [class *="pure-u"] {
+  font-family: system-ui, -apple-system, segoe ui, Roboto, Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji;
 }
 
-code, kbd, pre {
-  font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+code,
+kbd,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, liberation mono, courier new, monospace;
 }
 
 main {
@@ -13,10 +19,20 @@ main {
   padding: 1.5rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3 {
   @include font-bold;
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   margin-bottom: 1rem;
+}
+
+h4,
+h5,
+h6 {
+  @include font-bold;
+  margin-top: 1rem;
+  margin-bottom: 0.7rem;
 }
 
 h1 {
@@ -61,16 +77,16 @@ mark {
   background-color: var(--color-background-mark);
 }
 
-details > summary {
+details>summary {
   cursor: pointer;
 }
 
-details[open] > summary {
+details[open]>summary {
   cursor: pointer;
 }
 
 .content-margin {
-  @include my-8;
+  @include my-4;
 }
 
 .hidden {
