--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,9 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href='{{ "favicon.ico" | absURL }}' type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:title" content="Safer Illinois">
+    <meta property="og:description" content="Safer Illinois is pushing for a safer, more accessible Illinois St that supports all modes of transit.">
+    <meta property="og:image" content="/safer-poster.jpg">
     <title>
         {{- if eq .Kind "home" -}}
             {{- print .Site.Title -}}
