--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,6 +5,22 @@
     <meta property="og:title" content="Safer Illinois">
     <meta property="og:description" content="Safer Illinois is pushing for a safer, more accessible Illinois St that supports all modes of transit.">
     <meta property="og:image" content="/safer-poster.jpg">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://safer-illinois.netlify.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Safer Illinois">
+    <meta property="og:description"
+        content="Safer Illinois is pushing for a safer, more accessible Illinois St that supports all modes of transit.">
+    <meta property="og:image" content="/safer-poster.jpg">
+    
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="safer-illinois.netlify.app">
+    <meta property="twitter:url" content="https://safer-illinois.netlify.app/">
+    <meta name="twitter:title" content="Safer Illinois">
+    <meta name="twitter:description"
+        content="Safer Illinois is pushing for a safer, more accessible Illinois St that supports all modes of transit.">
+    <meta name="twitter:image" content="/safer-poster.jpg">
     <title>
         {{- if eq .Kind "home" -}}
             {{- print .Site.Title -}}
