--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,58 +1,92 @@
-{{ .Scratch.SetInMap "params" "syntax_highlight" (.Site.Params.syntax_highlight | default (dict "lib" "builtin" "builtin" (dict "enable_code_copy" true))) }}
+{{ .Scratch.SetInMap "params" "syntax_highlight" (.Site.Params.syntax_highlight | default (dict "lib" "builtin"
+"builtin" (dict "enable_code_copy" true))) }}
 {{ .Scratch.SetInMap "params" "enable_site_search" (.Site.Params.enable_site_search | default false) }}
 {{ .Scratch.SetInMap "params" "search_hidden" (.Params.search_hidden | default false) }}
-{{ .Scratch.SetInMap "params" "navbar_title" (.Params.navbar_title | default .Site.Params.navbar_title | default .Site.Title) }}
+{{ .Scratch.SetInMap "params" "navbar_title" (.Params.navbar_title | default .Site.Params.navbar_title | default
+.Site.Title) }}
 {{ .Scratch.SetInMap "params" "author" (.Params.author | default .Site.Params.author) }}
-{{ .Scratch.SetInMap "params" "enable_open_graph" (.Params.open_graph | default .Site.Params.enable_open_graph | default true) }}
-{{ .Scratch.SetInMap "params" "enable_twitter_cards" (.Params.twitter_cards | default .Site.Params.enable_twitter_cards | default true) }}
+{{ .Scratch.SetInMap "params" "enable_open_graph" (.Params.open_graph | default .Site.Params.enable_open_graph | default
+true) }}
+{{ .Scratch.SetInMap "params" "enable_twitter_cards" (.Params.twitter_cards | default .Site.Params.enable_twitter_cards
+| default true) }}
 {{ .Scratch.SetInMap "params" "enable_toc" (.Params.toc | default .Site.Params.enable_toc | default true) }}
-{{ .Scratch.SetInMap "params" "enable_zooming_js" (.Params.zooming_js | default .Site.Params.enable_zooming_js | default true) }}
+{{ .Scratch.SetInMap "params" "enable_zooming_js" (.Params.zooming_js | default .Site.Params.enable_zooming_js | default
+true) }}
 {{ .Scratch.SetInMap "params" "ga_code" (.Params.ga | default .Site.GoogleAnalytics) }}
 {{ .Scratch.SetInMap "params" "footer" (.Params.footer | default .Site.Params.footer) }}
 {{ .Scratch.SetInMap "params" "math" (.Params.math | default .Site.Params.enable_math | default false) }}
-{{ .Scratch.SetInMap "params" "enable_collapsible_toc" (.Params.collapsible_toc | default .Site.Params.enable_collapsible_toc | default false) }}
-{{ .Scratch.SetInMap "params" "enable_collapsible_changelogs" (.Params.collapsible_changelogs | default .Site.Params.enable_collapsible_changelogs | default false) }}
+{{ .Scratch.SetInMap "params" "enable_collapsible_toc" (.Params.collapsible_toc | default
+.Site.Params.enable_collapsible_toc | default false) }}
+{{ .Scratch.SetInMap "params" "enable_collapsible_changelogs" (.Params.collapsible_changelogs | default
+.Site.Params.enable_collapsible_changelogs | default false) }}
 {{ .Scratch.SetInMap "params" "color_scheme" (.Site.Params.color_scheme | default "light") }}
 
 <!DOCTYPE html>
 <html lang='{{ .Site.LanguageCode }}'>
-    {{- partial "head.html" . -}}
-    <body>
-        <main>
-            {{- partial "header.html" . -}}
-            {{- partial "nav.html" . -}}
-            {{- partial "sidebar.html" . -}}
-            <div id="content" class="content-margin">
-                {{ if .Params.changelogs }}
-                    {{ $enable_collapsible_changelogs := (.Scratch.Get "params").enable_collapsible_changelogs }}
-                    {{ partial "collapsible-menu.html" (dict "type" "changelogs" "context" . "enable" $enable_collapsible_changelogs) }}
-                {{ end }}
+{{- partial "head.html" . -}}
 
-                {{- block "content" . }}{{- end }}
+<body>
+    <main>
+        {{- partial "header.html" . -}}
+        {{- partial "nav.html" . -}}
+        {{- partial "sidebar.html" . -}}
+        <div id="content" class="content-margin">
+            {{ if .Params.changelogs }}
+            {{ $enable_collapsible_changelogs := (.Scratch.Get "params").enable_collapsible_changelogs }}
+            {{ partial "collapsible-menu.html" (dict "type" "changelogs" "context" . "enable"
+            $enable_collapsible_changelogs) }}
+            {{ end }}
 
-                {{ if eq .Kind "page" }}
-                    {{ if (.Params.disqus | default .Site.DisqusShortname) }}
-                        {{- partial "disqus.html" . -}}
-                    {{ end }}
-                {{ else }}
-                    {{ if (.Params.disqus | default false) }}
-                        {{- partial "disqus.html" . -}}
-                    {{ end }}
-                {{ end }}
-            </div>
-            <footer>
-                <article style="margin-top: 3rem">
-                    <p style="text-align: right;">Special thanks to <a id="christine-link" href="https://www.christineinnes.com/">Christine Innes</a> for her artwork.</p>
-                    <style>
-                        /* Style for the hyperlink */
-                        #christine-link {
-                            text-decoration: none; /* Remove default underline */
-                            font-weight: bold; /* Make the text bold */
-                            color: inherit; /* Change the text color to your preference */
+            {{- block "content" . }}{{- end }}
+
+            {{ if eq .Kind "page" }}
+            {{ if (.Params.disqus | default .Site.DisqusShortname) }}
+            {{- partial "disqus.html" . -}}
+            {{ end }}
+            {{ else }}
+            {{ if (.Params.disqus | default false) }}
+            {{- partial "disqus.html" . -}}
+            {{ end }}
+            {{ end }}
+        </div>
+        <footer>
+            <article style="margin-top: 3rem">
+                <div style="float: right;">
+                    <span id="start-thanks" style="text-align: right;">Special thanks to </span>
+                    <a id="christine-link" href="https://www.christineinnes.com/">Christine Innes</a>
+                    <span id="end-thanks"> for her artwork.</span>
+                </div>
+                <style>
+                    /* Style for the hyperlink */
+                    #christine-link {
+                        text-decoration: none;
+                        /* Remove default underline */
+                        font-weight: bold;
+                        /* Make the text bold */
+                        color: inherit;
+                        /* Change the text color to your preference */
+                    }
+                </style>
+                <script>
+                    function translateToSpanish() {
+                        // Get the current URL
+                        var currentURL = window.location.href;
+
+                        // Check if the URL contains "/es/"
+                        if (currentURL.includes("/es/")) {
+                            // Replace the text with the Spanish version
+                            document.getElementById("start-thanks").innerHTML = "Agradecemos a ";
+                            document.getElementById("end-thanks").innerHTML = " por sus imagenes.";
                         }
-                    </style>
-                </article>
-            </footer>
-        </main>
-    </body>
+                    }
+
+
+                    // Call the function when the page loads
+                    window.addEventListener('load', translateToSpanish);
+                </script>
+            </article>
+        </footer>
+    </main>
+</body>
+
 </html>
